--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-client/npm-debug.log
-client/.haxelib
-client/.vscode
-client/*.sh
-client/webpack.local.js
-client/yarn.lock
-httpdocs/lib/*
-node_modules
-.temp
-cmessage.txt
-clast.txt
-server/.haxelib
-server/.vscode
-server/server.code-workspace
-server/*.sh
-package-lock.json
+.haxelib
+app.js*
